# events

./: .env  Cargo.toml
migrations/2021-05-29-193638_user/: up.sql
src/: lib.rs  main.rs  schema.rs
src/data/: db.rs  mod.rs  mysql_connection.rs  user.rs
src/routes/: ping.rs  user.rs
tests/: basic_test.rs
tests/common/: mod.rs
