[package]
name = "bd_back"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = {version = "1.0.126", features = ["derive"]}
lazy_static = "1.4.0"
rust-argon2 = "0.8.3"
rand = "0.8.3"
chrono = {version = "0.4.19", features = ["serde"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel = { version = "1.4.6", features = ["mysql", "r2d2"]}
dotenv = "0.15.0"
rust-crypto = "^0.2"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["helmet", "serve", "json", "uuid", "handlebars_templates"]

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.59"
